fix z-index & quantityCart

--- a/src/ProductList.css
+++ b/src/ProductList.css
@@ -215,6 +215,7 @@ body {
 }
 .popup {
   position: fixed;
+  z-index: 1000;
   bottom: 50%;
   left: 50%;
   transform: translateX(-50%);
